画像の取得、サインインの追加をしました。

--- a/SampleMVVMApp/View/HomeTableViewCell.xib
+++ b/SampleMVVMApp/View/HomeTableViewCell.xib
@@ -31,7 +31,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="sampleImageView" destination="jZL-2z-LGL" id="7kG-IO-Gfd"/>
+                <outlet property="postImageView" destination="jZL-2z-LGL" id="2Ff-uC-SfE"/>
             </connections>
             <point key="canvasLocation" x="146.37681159420291" y="80.691964285714278"/>
         </tableViewCell>
