--- a/SampleMVVMApp/View/Home.storyboard
+++ b/SampleMVVMApp/View/Home.storyboard
@@ -22,7 +22,7 @@
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="ログアウト"/>
                             </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="fNd-Aw-Zky">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="fNd-Aw-Zky">
                                 <rect key="frame" x="20" y="94" width="374" height="768"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jzx-5y-2HQ">
@@ -37,8 +37,9 @@
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fu9-sp-w8u">
-                                        <rect key="frame" x="166.5" y="125" width="41" height="50"/>
+                                        <rect key="frame" x="127" y="150" width="120" height="50"/>
                                         <constraints>
+                                            <constraint firstAttribute="width" constant="120" id="CHm-rV-2wA"/>
                                             <constraint firstAttribute="height" constant="50" id="Zc8-Ph-t2Z"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
@@ -47,7 +48,7 @@
                                         <state key="normal" title="投稿"/>
                                     </button>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="hJd-S2-Chj">
-                                        <rect key="frame" x="0.0" y="180" width="374" height="588"/>
+                                        <rect key="frame" x="0.0" y="230" width="374" height="538"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </tableView>
                                 </subviews>
